--- a/7.Persistence/Blog/appsettings.json
+++ b/7.Persistence/Blog/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DatabaseConfig": {
+    "UseInMemoryDatabase": true,
+    "DefaultConnectionString": "DataSource=blog.db"
+  },
   "AllowedHosts": "*"
 }
